--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "hungsilverrrrrrrrrrrrrrrrrrrr1232334345656789",
+    "Issuer": "https://localhost:5001", // server - ben phat hanh
+    "Audience": "https://localhost:5001" // client -  ben khach
+  }
 }
